ENH: router points to stub page components

--- a/www/src/index.css
+++ b/www/src/index.css
@@ -15,13 +15,20 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
-a:hover {
-  color: #535bf2;
+
+body {
+  height: 100vh;
+  width: 100vw;
+}
+
+/* include border and padding in element width and height */
+* {
+  box-sizing: border-box;
 }
 
 @media (prefers-color-scheme: light) {
