ENH: add 3 sections of shoelace details on population

--- a/www/src/index.css
+++ b/www/src/index.css
@@ -13,6 +13,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --primarycolor: #166db7;
+  --textwhite: white;
 }
 
 html,
