ENH: style accordion headers, min height to sections

--- a/www/src/index.css
+++ b/www/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -14,8 +14,8 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  --primarycolor: #166db7;
-  --textwhite: white;
+  --primary-color: #166db7;
+  --text-white: white;
 }
 
 html,
